Fix for OPENAM-468
git-svn-id: https://svn.forgerock.org/openam/trunk@591 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d